chore: 템플릿 수정

--- a/module-admin/src/main/resources/templates/layout/nav.html
+++ b/module-admin/src/main/resources/templates/layout/nav.html
@@ -405,7 +405,7 @@
           </a>
         </li>
         <li class="">
-          <a href="javascript:void(0)">
+          <a href="/admin/popup/view">
             <span class="pcoded-micon"><i class="feather icon-home"></i></span>
             <span class="pcoded-mtext">팝업관리</span>
           </a>
@@ -417,12 +417,12 @@
           </a>
           <ul class="pcoded-submenu">
             <li class="">
-              <a href="/admin/sendHistory">
+              <a href="/admin/sendHistory/view">
                 <span class="pcoded-mtext">발송이력</span>
               </a>
             </li>
             <li class="">
-              <a href="/admin/templateManage">
+              <a href="/admin/templateManage/view">
                 <span class="pcoded-mtext">템플릿관리</span>
               </a>
             </li>
